Added syllabics input method for linux.

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is a collection of my utilities for computing with the Anishinaabe language.
+
+xim-syllabics: An XKB/XCompose input method for syllabics.
